# duckdb

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  C_API_V2.md  Makefile  duckdb.h  justfile  main.c  pyproject.toml  schema_reference.md
.github/workflows/: ci.yml  v2-capi.yml
api_spec/: metadata.yaml
api_spec/v1/: metadata.yaml
api_spec/v1/aggregate_function/: aggregate_function.yaml
api_spec/v1/appender/: appender.yaml
api_spec/v1/arrow/: arrow.yaml
api_spec/v1/cast_function/: cast_function.yaml
api_spec/v1/catalog/: catalog.yaml
api_spec/v1/common/: enums.yaml  handles.yaml  types.yaml
api_spec/v1/config_option/: config_option.yaml
api_spec/v1/connection/: connection.yaml
api_spec/v1/data_chunk/: data_chunk.yaml
api_spec/v1/database/: open_close.yaml
api_spec/v1/expression/: expression.yaml
api_spec/v1/file_system/: file_system.yaml
api_spec/v1/log_storage/: log_storage.yaml
api_spec/v1/logical_type/: logical_type.yaml
api_spec/v1/pending/: pending.yaml
api_spec/v1/prepared_statement/: prepared_statement.yaml
api_spec/v1/query/: datetime_helpers.yaml  query.yaml
api_spec/v1/replacement_scan/: replacement_scan.yaml
api_spec/v1/scalar_function/: copy_function.yaml  scalar_function.yaml
api_spec/v1/table_description/: table_description.yaml
api_spec/v1/table_function/: table_function.yaml
api_spec/v1/threading/: threading.yaml
api_spec/v1/value/: value.yaml
api_spec/v1/vector/: vector.yaml
api_spec/v2/: metadata.yaml  scalar_example.yaml
api_spec/v2/common/: common.yaml  error_codes.yaml
api_spec/v2/configuration/: configuration.yaml
api_spec/v2/connection/: connection.yaml
api_spec/v2/data_chunk/: data_chunk.yaml
api_spec/v2/database/: database.yaml
api_spec/v2/environment/: environment.yaml
api_spec/v2/error/: error.yaml  error_handling.yaml
api_spec/v2/filesystem/: file_system.yaml
api_spec/v2/function/: scalar.yaml
api_spec/v2/helpers/: helpers.yaml
api_spec/v2/logical_type/: logical_type.yaml
api_spec/v2/prepared_statements/: prepared_statements.yaml
api_spec/v2/query_result/: query_result.yaml
api_spec/v2/type_value/: type_value.yaml
api_spec/v2/value/: value.yaml
api_spec/v2/vector/: vector.yaml
capiv2/: .pre-commit-config.yaml  README.md  claude.md  design.md  justfile  pyproject.toml
capiv2/api_spec/: metadata.yaml
capiv2/api_spec/v2/: scalar_example.yaml
capiv2/src/capigen/: __main__.py  validate.py
capiv2/tests/: test_generate.py  test_validate.py
examples/standalone-window/: CMakeLists.txt
extension/: CMakeLists.txt  extension_config.cmake  extension_config_local.cmake
extension/autocomplete/transformer/: peg_transformer_factory.cpp  transform_alter.cpp  transform_attach.cpp  transform_common.cpp  transform_copy.cpp  transform_create_index.cpp  transform_create_secret.cpp  transform_create_sequence.cpp  transform_expression.cpp  transform_select.cpp
extension/core_functions/: function_list.cpp  lambda_functions.cpp
extension/geo/: CMakeLists.txt  geo-extension.cpp  geo_common.cpp  geo_functions.cpp  geo_type.cpp  geo_types.cpp
extension/geo/geo_functions/: CMakeLists.txt  TODO.md  st_geohash.cpp  st_make_line.cpp  st_point.cpp
extension/geo/include/: geo-extension.hpp  geo_common.hpp  geo_functions.hpp  geo_types.hpp
extension/json/: CMakeLists.txt
extension/json/yyjson/: CMakeLists.txt  yyjson_ext.cpp  yyjson_ext.hpp
extension/parquet/: column_reader.cpp  column_writer.cpp  geo_parquet.cpp  parquet_extension.cpp  parquet_geometry.cpp  parquet_metadata.cpp  parquet_reader.cpp  parquet_shredding.cpp  parquet_statistics.cpp  parquet_writer.cpp
extension_v2/json/: CMakeLists.txt  json_extension.cpp
extension_v2/sqlite/: CMakeLists.txt  sqlite_extension.cpp  sqlite_scanner.cpp
extension_v2/sqlite/include/: sqlite_scanner_extension.hpp
extension_v2/sqlite/storage/: CMakeLists.txt
python_client/: CMakeLists.txt  README.md  pyproject.toml
python_client/src/: duckdb.cpp
python_client/src/duckdb/: __init__.py
scripts/: amalgamation.py  capi_v1_regen.sh  capi_v2_regen.sh  format.py
src/: CMakeLists.txt
src/capigen/: tools.py
src/catalog/: duck_catalog.cpp
src/common/: CMakeLists.txt  complex_json.cpp  enum_util.cpp  extra_type_info.cpp  json_value.cpp  local_file_system.cpp  types.cpp  virtual_file_system.cpp  zip_file_system.cpp
src/core_functions/: function_list.cpp
src/execution/: CMakeLists.txt  physical_operator.cpp  physical_plan_generator.cpp
src/function/: aggregate_function.cpp  built_in_functions.cpp  cast_rules.cpp  function.cpp  function_binder.cpp  function_list.cpp  function_set.cpp  scalar_function.cpp  table_function.cpp  udf_function.cpp  window_function.cpp
src/include/: duckdb.h  duckdb_v1.h  duckdb_v2.h
src/logging/: log_types.cpp
src/main/: CMakeLists.txt  client_context.cpp  client_context_file_opener.cpp  config.cpp  database.cpp  node_query_result.cpp
src/optimizer/: aggregate_function_rewriter.cpp  compressed_materialization.cpp  cte_inlining.cpp  expression_rewriter.cpp  optimizer.cpp  remove_unused_columns.cpp  topn_window_elimination.cpp
src/parser/: parsed_expression_iterator.cpp  transformer.cpp
src/planner/: bind_context.cpp  collation_binding.cpp  expression_binder.cpp
src/service/: CMakeLists.txt  service_container.cpp
src/services/: CMakeLists.txt  service_container.cpp
src/storage/: checkpoint_manager.cpp  index.cpp  single_file_block_manager.cpp  standard_buffer_manager.cpp  temporary_file_manager.cpp  wal_replay.cpp  write_ahead_log.cpp
test/api/: CMakeLists.txt
test/common/: CMakeLists.txt  test_streams.cpp
test/extension/: loadable_extension_demo.cpp  test_custom_type.test
test/geo/: geo.test
test/geoparquet/: disabled.test  mixed.test  roundtrip.test  unsupported.test
test/sqlite/: sqllogic_parser.cpp  sqllogic_parser.hpp  sqllogic_test_runner.cpp
tests/: test_generate.py  test_resolve.py  test_schema.py  test_tools.py  test_validate.py
tests/testspec/: metadata.yaml
tools/nodejs/: CMakeLists.txt
tools/pythonpkg/: CMakeLists.txt
(+648 files in other folders)
