[project]
name = "capigen"
version = "0.1.0"
description = "DuckDB C API v2 header generator"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "jsonschema>=4.23.0",
]

[project.scripts]
capigen = "capigen.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    # scripts/format.py runtime: pinned to match .pre-commit-config.yaml so the
    # formatter behaves identically inside and outside the commit hook.
    # cmake-format is intentionally NOT here — it runs only via its own
    # pre-commit hook (cheshirekow/cmake-format-precommit) in an isolated
    # venv, so we avoid Python 3.14's re.Scanner crash without a shim.
    "black==24.*",
    "cxxheaderparser",
    "pcpp",
    "clang_format==11.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
