[project]
name = "duckdb-capi-v2-dev"
version = "0.1.0"
description = "Development environment for the DuckDB C API v2 fork"
requires-python = ">=3.12"
dependencies = [
    "capigen",
]

[tool.uv.sources]
capigen = { path = "capigen", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    # scripts/format.py runtime: pinned to match .pre-commit-config.yaml so the
    # formatter behaves identically inside and outside the commit hook.
    # cmake-format is intentionally NOT here — it runs only via its own
    # pre-commit hook (cheshirekow/cmake-format-precommit) in an isolated
    # venv, so we avoid Python 3.14's re.Scanner crash without a shim.
    "black==24.*",
    "cxxheaderparser",
    "pcpp",
    "clang_format==11.0.1",
    # typos-cli (PyPI package name `typos`) ships a prebuilt binary; format.py
    # invokes it as a subprocess and aborts when missing. Needed on Linux CI
    # where there's no `brew install typos-cli` fallback.
    "typos",
]
