######################################################################################################
# PROJECT CONFIG
######################################################################################################

[project]
name = "duckdb"
version = "2.0.0"
description = "DuckDB's Python extension"
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "DuckDB Foundation"}]
maintainers = [{name = "DuckDB Foundation"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: Python",
]

[build-system]
requires = [
    "scikit-build-core>=0.12.2",
    "nanobind>=2.12.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.12"
cmake.version = ">=3.30.0"
ninja.version = ">=1.10"
ninja.make-fallback = false
wheel.cmake = true
wheel.py-api = "cp312"
wheel.packages = ["src/duckdb"]

[[tool.scikit-build.overrides]]
if.state = "editable"
cmake.build-type = "Debug"
editable.mode = "redirect"
editable.rebuild = true
build-dir = "build/debug"

[[tool.scikit-build.overrides]]
if.state = "editable"
inherit.cmake.define = "append"
cmake.define.CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

[[tool.scikit-build.overrides]]
if.state = "editable"
if.platform-system = "^darwin"
inherit.cmake.define = "append"
cmake.define.CMAKE_OSX_SYSROOT = "macosx"

[dependency-groups]
build = [
    "nanobind>=2.12.0",
    "cmake>=3.30.0",
    "ninja>=1.10",
    "scikit_build_core>=0.12",
    # for now, include capigen as a dependency here
    "hatchling",  # build backend for capigen
    "capigen @ file:///${PROJECT_ROOT}/../capigen",
]
test = [ # dependencies used for running tests
    "pytest",
    "pytest-cov",
    "pytest-xvfb",
]
lint = [ # linting and formatting tools
    "ruff",
    "mypy",
    "cmake-format",
    "clang-format",
    "clang-tidy",
    "pre-commit",
]
dev = [ # tooling like uv will install this automatically when syncing the environment
    {include-group = "build"},
    {include-group = "test"},
    {include-group = "lint"},
]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py310"
indent-width = 4
fix = true
exclude = ['.cmake-format.py']

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by line-length)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
exclude = [
    "tests/integration/",
    "tests/performance/",
    "tests/sql/",
    "tests/unit/",
    "tests/capi/"
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=duckdb",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "dbapi: DB API 2.0 tests",
    "threading: free-threading tests",
    "multi_interpreter: multi-interpreter safety tests",
    "performance: performance and benchmark tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/duckdb"]
omit = [
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

# cibuildwheel configuration
[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = 1

# Test configuration
test-requires = "pytest pytest-cov"
test-command = "pytest {project}/tests"
test-skip = ["*-macosx_universal2"]  # Skip tests for universal builds
